--- a/Asesorias.html
+++ b/Asesorias.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asesorias - SSSkin&Mkup</title>
+    <meta name="title" content="Sophie Sanvitale MakeUp & Skin">
+    <meta name="description" content="Esta es mi pagina personal de MakeUp & Skin. Made by Sophie Sanvitale.">
+    <meta name="keywords" content="MakeUp, Skin, Personal">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Sophie Sanvitale">
+    <title>Asesorias - SSMakeUp&Skin</title>
 
     <!--LINK BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,9 +22,65 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<img src="/imagenes/1.png" alt="Logo" class="img8">
-<h1 class="texto5">Asesorias</h1>
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="./imagenes/1.png" alt="Logo" class="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./QuienSoy.html">Quien Soy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Rutinas.html">Rutinas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./Asesorias.html">Asesorias</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <body>
+    <div class="header">
+    </div>
+    <div class="contenido-asesorias">
+        <p class="gradient-lineal">Las atenciones en Gabinete cuentan con cremas de laboratorios de primera calidad, que
+            cumplen con todos los requisititos de salud e higiene.</p>
+        <img class="fotos-1" src="./imagenes/camilla.webp" alt="camilla">
+        <p class="gradient-radial">Los elementos que tenemos en nuestro espacio, siempre son un compromiso primero con
+            la
+            salud y luego con la confiabilidad, durabilidad, y años de trayectoria de los elementos a utilizar.</p>
+        <img class="fotos-2" src="./imagenes/espatula ultrasonica.webp" alt="espatula">
+        <p class="gradient-lineal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et
+            dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+        <img class="fotos-3" src="./imagenes/ice globes.webp" alt="iceglobes">
+        <p class="gradient-radial">Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+            sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        </p>
+        <img class="fotos-4" src="./imagenes/dermaplaining.webp" alt="dermaplainig">
+        <p class="gradient-lineal">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+            laudantium, totam rem
+            aperiam,
+            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+        </p>
+    </div>
+    <iframe src="" frameborder="0">Dermaplainig en acción</iframe>
 
 </body>
 
@@ -27,14 +90,14 @@
         <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank" class="red2">Facebook</a>
         <a href="https://wa.me/541140874353" target="_blank" class="red3">WhatsApp</a>
     </div>
-    
+
     <A:link class="mapa"><iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
             width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
-            <div class="contact-info">
-                <span>Email: sofia.yas@gmail.com</span>
-            </div>
+    <div class="contact-info">
+        <span>Email: sofia.yas@gmail.com</span>
+    </div>
 </footer>
 
 
