--- a/Productos.html
+++ b/Productos.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - SSSkin&Mkup</title>
+    <meta name="title" content="Sophie Sanvitale MakeUp & Skin">
+    <meta name="description" content="Esta es mi pagina personal de MakeUp & Skin. Made by Sophie Sanvitale.">
+    <meta name="keywords" content="MakeUp, Skin, Personal">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Sophie Sanvitale">
+    <title>Productos - SSMakeUp&Skin</title>
 
-     <!--LINK BOOTSTRAP-->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--LINK BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <!--LINK CSS-->
-<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
-<img src="/imagenes/1.png" alt="Logo" class="img8">
-<h1 class="texto3">Productos</h1>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="./imagenes/1.png" alt="Logo" class="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./QuienSoy.html">Quien Soy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./Productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Rutinas.html">Rutinas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Asesorias.html">Asesorias</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 <body>
-    <DIV class="etiqueta">
-    <p>PROXIMAMENTE TIENDA - EN CONSTRUCCIÓN</p>
-</DIV>
+    <div class="etiqueta">
+        <p class="marcas">MARCAS CON LAS QUE TRABAJAMOS</p>
+        <img class="foto-5" src="./imagenes/logo exel.jpg" alt="Exel">
+        <img class="foto-6" src="./imagenes/logo lidherma.jpg" alt="lidherma">
+        <img class="foto-7" src="./imagenes/logo prodermic.webp" alt="PRODERMIC">
+        <img class="foto-8" src="./imagenes/logo zine.webp" alt="zine">
+    </div>
 </body>
 
 <footer>
@@ -30,14 +67,14 @@
         <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank" class="red2">Facebook</a>
         <a href="https://wa.me/541140874353" target="_blank" class="red3">WhatsApp</a>
     </div>
-    
+
     <A:link class="mapa"><iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
             width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
-            <div class="contact-info">
-                <span>Email: sofia.yas@gmail.com</span>
-            </div>
+    <div class="contact-info">
+        <span>Email: sofia.yas@gmail.com</span>
+    </div>
 </footer>
 
 
