--- a/quiensoy.html
+++ b/quiensoy.html
@@ -1,44 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quien Soy - SS MakeUP & Skin</title>
+    <meta name="title" content="Sophie Sanvitale MakeUp & Skin">
+    <meta name="description" content="Esta es mi pagina personal de MakeUp & Skin. Made by Sophie Sanvitale.">
+    <meta name="keywords" content="MakeUp, Skin, Personal">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Sophie Sanvitale">
+    <title>Quien Soy - SSMakeUp&Skin</title>
 
- <!--LINK BOOTSTRAP-->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
- integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--LINK BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-<!--link css-->
-<link rel="stylesheet" href="/css/style.css">
+    <!--LINK CSS-->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
-<img src="/imagenes/1.png" alt="Logo" class="img8">
-<h1 class="texto2">Quien Soy</h1>
 
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="./imagenes/1.png" alt="Logo" class="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./QuienSoy.html">Quien Soy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Rutinas.html">Rutinas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Asesorias.html">Asesorias</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 <body>
-    <div class="contendor1"><h2>Hablando de mi</h2>
-        <img src="/imagenes/yo.jpg" alt="yo" class="img9">
-        <p>Hola, mi nombre es Sofia Sanvitale, trabajo y estudio sobre estetica hace ya varios años. Soy Cosmetologa, Cosmiatra, Maquilladora Profesional y Revendedora de productos de Exel, Lidherma, Idraet y Biobellus, entre otros.</p>
-        
+    <div class="contendor1">
+        <h2>Hablando de mi</h2>
+        <img src="./imagenes/yo.jpg" alt="yo" class="img9">
+        <p>Hola, mi nombre es Sofia Sanvitale, trabajo y estudio sobre estetica hace ya varios años. Soy Cosmetologa,
+            Cosmiatra, Maquilladora Profesional y Revendedora de productos de Exel, Lidherma, Idraet y Biobellus, entre
+            otros.</p>
+
     </div>
 </body>
 
 <footer>
     <div class="footer-links">
-        <a href="https://www.instagram.com/sophiesanvitale_makeup/" target="_blank" class="red1">Instagram</a>
-        <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank" class="red2">Facebook</a>
-        <a href="https://wa.me/541140874353" target="_blank" class="red3">WhatsApp</a>
+        <a href="https://www.instagram.com/sophiesanvitale_makeup/" target="_blank"><svg
+                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-instagram">
+                <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+            </svg>
+            Instagram
+        </a>
+        <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+                width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-facebook">
+                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+            </svg>
+            Facebook
+        </a>
+        <a href="https://wa.me/541140874353" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-messages-square">
+                <path d="M14 9a2 2 0 0 1-2 2H6l-4 4V4c0-1.1.9-2 2-2h8a2 2 0 0 1 2 2v5Z" />
+                <path d="M18 9h2a2 2 0 0 1 2 2v11l-4-4h-6a2 2 0 0 1-2-2v-1" />
+            </svg>
+            WhatsApp
+        </a>
+        <a href="mailto:sofia.yas@gmail.com" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-at-sign">
+                <circle cx="12" cy="12" r="4" />
+                <path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8" />
+            </svg>
+            Email
+        </a>
     </div>
-    
+
     <A:link class="mapa"><iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
             width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
-            <div class="contact-info">
-                <span>Email: sofia.yas@gmail.com</span>
-            </div>
 </footer>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+
 </html>
