--- a/Asesorias.html
+++ b/Asesorias.html
@@ -62,23 +62,15 @@
             la
             salud y luego con la confiabilidad, durabilidad, y años de trayectoria de los elementos a utilizar.</p>
         <img class="fotos-2" src="./imagenes/espatula ultrasonica.webp" alt="espatula">
-        <p class="gradient-lineal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et
-            dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+        <p class="gradient-lineal-1">La espatula ultrasonica tiene beneficios para la piel, pero sobre todo es un tratamiento, NO INVASIVO. Es rápida, mejora la elasticidad de la piel, en sus funciones de limpieza afina el estrato corneo de la piel, ayuda a remover impurezas, membranas celulares vacias, y comedones abiertos o cerrados.
+            Al mismo tiempo, al afinar el estrato corneo, contribuye a disminuir las lineas de expresión, y reducir las manchas o excesos de pigmentación en la piel. </p>
         <img class="fotos-3" src="./imagenes/ice globes.webp" alt="iceglobes">
-        <p class="gradient-radial">Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-            sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        <p class="gradient-radial">Los ICE GLOBS son herramientas NO INVASIVAS, que colaboran a incrementar la irrigación sanguinea. Descongestionan, bajan la temperatura,
+            entre tantos otros beneficios.
         </p>
         <img class="fotos-4" src="./imagenes/dermaplaining.webp" alt="dermaplainig">
-        <p class="gradient-lineal">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-            laudantium, totam rem
-            aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-        </p>
+        <p class="gradient-lineal">El mango de bisturí y las hojas que se utilizan en nuestro espacio, son aquellos que se formularon especificamente para este fin.
+            La marca comercial de SWANN MORTON. En nuestro país, existe un único importador habilitado y en regla hasta la fecha.</p>
     </div>
     <iframe src="" frameborder="0">Dermaplainig en acción</iframe>
 
@@ -86,19 +78,46 @@
 
 <footer>
     <div class="footer-links">
-        <a href="https://www.instagram.com/sophiesanvitale_makeup/" target="_blank" class="red1">Instagram</a>
-        <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank" class="red2">Facebook</a>
-        <a href="https://wa.me/541140874353" target="_blank" class="red3">WhatsApp</a>
+      <a href="https://www.instagram.com/sophiesanvitale_makeup/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+          width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram">
+          <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+          <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+          <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+        </svg>
+        Instagram
+      </a>
+      <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+          width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-facebook">
+          <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+        </svg>
+        Facebook
+      </a>
+      <a href="https://wa.me/541140874353" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+          stroke-linejoin="round" class="lucide lucide-messages-square">
+          <path d="M14 9a2 2 0 0 1-2 2H6l-4 4V4c0-1.1.9-2 2-2h8a2 2 0 0 1 2 2v5Z" />
+          <path d="M18 9h2a2 2 0 0 1 2 2v11l-4-4h-6a2 2 0 0 1-2-2v-1" />
+        </svg>
+        WhatsApp
+      </a>
+      <a href="mailto:sofia.yas@gmail.com" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="lucide lucide-at-sign">
+          <circle cx="12" cy="12" r="4" />
+          <path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8" />
+        </svg>
+        Email
+      </a>
     </div>
-
+  
     <A:link class="mapa"><iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
-            width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
-    <div class="contact-info">
-        <span>Email: sofia.yas@gmail.com</span>
-    </div>
-</footer>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
+        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
+  </footer>
 
 
 </html>
