--- a/Productos.html
+++ b/Productos.html
@@ -53,29 +53,64 @@
 
 <body>
     <div class="etiqueta">
-        <p class="marcas">MARCAS CON LAS QUE TRABAJAMOS</p>
+        <h3 class="marcas">MARCAS CON LAS QUE TRABAJAMOS</h3>
         <img class="foto-5" src="./imagenes/logo exel.jpg" alt="Exel">
         <img class="foto-6" src="./imagenes/logo lidherma.jpg" alt="lidherma">
         <img class="foto-7" src="./imagenes/logo prodermic.webp" alt="PRODERMIC">
-        <img class="foto-8" src="./imagenes/logo zine.webp" alt="zine">
+        <img class="foto-8" src="./imagenes/Logo Idraet.webp" alt="zine">
     </div>
+
+<div class="subtitulos-productos">
+<h4>Productos más vendidos de Exel Institute</h4>
+<h4>Productos más vendidos de LIDHERMA</h4>
+<h4>Productos más vendidos de Prodermic</h4>
+<h4>Productos más vendidos de IDRAET Dermopurity</h4>
+</div>
+
 </body>
 
 <footer>
     <div class="footer-links">
-        <a href="https://www.instagram.com/sophiesanvitale_makeup/" target="_blank" class="red1">Instagram</a>
-        <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank" class="red2">Facebook</a>
-        <a href="https://wa.me/541140874353" target="_blank" class="red3">WhatsApp</a>
+      <a href="https://www.instagram.com/sophiesanvitale_makeup/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+          width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram">
+          <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+          <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+          <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+        </svg>
+        Instagram
+      </a>
+      <a href="https://www.facebook.com/MakeUpSophieSanvitale" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+          width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-facebook">
+          <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+        </svg>
+        Facebook
+      </a>
+      <a href="https://wa.me/541140874353" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+          stroke-linejoin="round" class="lucide lucide-messages-square">
+          <path d="M14 9a2 2 0 0 1-2 2H6l-4 4V4c0-1.1.9-2 2-2h8a2 2 0 0 1 2 2v5Z" />
+          <path d="M18 9h2a2 2 0 0 1 2 2v11l-4-4h-6a2 2 0 0 1-2-2v-1" />
+        </svg>
+        WhatsApp
+      </a>
+      <a href="mailto:sofia.yas@gmail.com" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="lucide lucide-at-sign">
+          <circle cx="12" cy="12" r="4" />
+          <path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8" />
+        </svg>
+        Email
+      </a>
     </div>
-
+  
     <A:link class="mapa"><iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
-            width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
-    <div class="contact-info">
-        <span>Email: sofia.yas@gmail.com</span>
-    </div>
-</footer>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.865626549947!2d-57.88141342493096!3d-36.86963508067107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959a397b8648e89d%3A0x65f47c7cddaf0703!2sIndependencia%2C%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1682996028469!5m2!1ses-419!2sar"
+        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe></A:link>
+  </footer>
 
 
 </html>
