--- a/Asesorias.html
+++ b/Asesorias.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="./Rutinas.html">Rutinas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./Asesorias.html">Asesorias</a>
+                        <a class="nav-link active" href="./Asesorias.html">Asesorias y Servicios</a>
                     </li>
                 </ul>
             </div>
@@ -69,11 +69,16 @@
             entre tantos otros beneficios.
         </p>
         <img class="fotos-4" src="./imagenes/dermaplaining.webp" alt="dermaplainig">
-        <p class="gradient-lineal">El mango de bisturí y las hojas que se utilizan en nuestro espacio, son aquellos que se formularon especificamente para este fin.
-            La marca comercial de SWANN MORTON. En nuestro país, existe un único importador habilitado y en regla hasta la fecha.</p>
+        <p class="gradient-lineal">El mango de bisturí y las hojas que se utilizan en nuestro espacio, se formularon especificamente para este fin.
+            La marca comercial de SWANN MORTON. En nuestro país, existe un único importador habilitado hasta la fecha.</p>
     </div>
     <iframe src="" frameborder="0">Dermaplainig en acción</iframe>
 
+<div class="gradient-lineal-as">
+<h3>Turnos para atención en gabinete</h3>
+<p class="texto-turnos">Agenda tu turno para asesoría online, o atención presencial en gabinete. Para maquillajes, consúltame! Tu tiempo y el mío, son MUY importantes. Por eso pido una seña del 50% del valor del turno, si no podes asistir y me avisas con 24 hs de anticipación o más, podemos re-programar. Después de las 24 hs previas al turno, no hay cambios y/o devoluciones.</p>
+<a href="https://calendar.app.google/vkPAcgcStXnwGnrW7">Hacé click acá, para ingresar en la agenda!</a>
+</div>
 </body>
 
 <footer>
