--- a/Productos.html
+++ b/Productos.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="./Rutinas.html">Rutinas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Asesorias.html">Asesorias</a>
+                        <a class="nav-link" href="./Asesorias.html">Asesorias y Servicios</a>
                     </li>
                 </ul>
             </div>
@@ -52,19 +52,47 @@
 </header>
 
 <body>
-    <div class="etiqueta">
-        <h3 class="marcas">MARCAS CON LAS QUE TRABAJAMOS</h3>
+    <div class="marcas">
+        <h3 class="titulo-marcas">MARCAS CON LAS QUE TRABAJAMOS</h3>
         <img class="foto-5" src="./imagenes/logo exel.jpg" alt="Exel">
         <img class="foto-6" src="./imagenes/logo lidherma.jpg" alt="lidherma">
-        <img class="foto-7" src="./imagenes/logo prodermic.webp" alt="PRODERMIC">
-        <img class="foto-8" src="./imagenes/Logo Idraet.webp" alt="zine">
+        <img class="foto-7" src="./imagenes/logo-biobellus.webp" alt="biobellus">
+        <img class="foto-8" src="./imagenes/Logo Idraet.webp" alt="Idraet">
     </div>
 
 <div class="subtitulos-productos">
-<h4>Productos más vendidos de Exel Institute</h4>
-<h4>Productos más vendidos de LIDHERMA</h4>
-<h4>Productos más vendidos de Prodermic</h4>
-<h4>Productos más vendidos de IDRAET Dermopurity</h4>
+<h4 class="subtitulo-marcas">Mis productos elegidos de Exel Institute</h4>
+<div class="gradient-lineal-marcas">
+<img src="./imagenes/limpieza exel.webp" alt="limpieza-ex" class="imgex1">
+<img src="./imagenes/fps exel.webp" alt="fps-exel" class="imgex2">
+<img src="./imagenes/tonico exel.webp" alt="tonico-exel" class="imgex3">
+<img src="./imagenes/celulitis exel.webp" alt="celulitis-exel" class="imgex4">
+<img src="./imagenes/promoter exel.webp" alt="promoter-exel" class="imgex5">
+</div>
+<h4 class="subtitulo-marcas">Mis productos elegidos de LIDHERMA</h4>
+<div class="gradient-lineal-marcas">
+<img src="./imagenes/hidrosomas.webp" alt="hidrosomas" class="imglid1">
+<img src="./imagenes/hyaluronic 4d.webp" alt="hyaluronic" class="imglid2">
+<img src="./imagenes/radian c.webp" alt="radianC" class="imglid3">
+<img src="./imagenes/ultra retinol.webp" alt="URetinol" class="imglid4">
+<img src="./imagenes/sense control tonico.webp" alt="sensecontrol" class="imglid5">
+</div>
+<h4 class="subtitulo-marcas">Productos más vendidos de Biobellus</h4>
+<div class="gradient-lineal-marcas">
+<img src="./imagenes/skincer.webp" alt="skincer" class="imgbio1">
+<img src="./imagenes/gel limpieza biobellus.webp" alt="gel-limpieza-biobellus" class="imgbio2">
+<img src="./imagenes/bruma biobellus.webp" alt="bruma-biobellus" class="imgbio3">
+<img src="./imagenes/jojoba biobellus.webp" alt="aceite-jojoba" class="imgbio4">
+<img src="./imagenes/serums biobellus.webp" alt="serums-biobellus" class="imgbio5">
+</div>
+<h4 class="subtitulo-marcas">Productos más vendidos de IDRAET Dermopurity</h4>
+<div class="gradient-lineal-marcas">
+<img src="./imagenes/stress out.jpeg" alt="stress-out" class="imgid1">
+<img src="./imagenes/mascara enzimatica.webp" alt="máscara-enzimatica" class="imgid2">
+<img src="./imagenes/gel vit C.webp" alt="gel-limpieza" class="imgid3">
+<img src="./imagenes/protective toner.webp" alt="toner" class="imgid4">
+<img src="./imagenes/serums.webp" alt="serums-idraet" class="imgid5">
+</div>
 </div>
 
 </body>
