--- a/Rutinas.html
+++ b/Rutinas.html
@@ -43,7 +43,7 @@
                         <a class="nav-link active" href="./Rutinas.html">Rutinas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Asesorias.html">Asesorias</a>
+                        <a class="nav-link" href="./Asesorias.html">Asesorias y Servicios</a>
                     </li>
                 </ul>
             </div>
