--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
 
 <body>
   <div class="section1">
-    <h2>Fotos de mis Trabajos</h2>
-
-    <p>Algunas muestras de mis trabajos, en imagenes de los últimos años.</p>
-  </div>
+    <h2 class="titulo-pagina">Sophie Sanvitale Skin & Makeup</h2>
+    </div>
 
   <!--fotos-->
   <div class="imagenes-homepage">
@@ -97,7 +95,7 @@
         <path d="M14 9a2 2 0 0 1-2 2H6l-4 4V4c0-1.1.9-2 2-2h8a2 2 0 0 1 2 2v5Z" />
         <path d="M18 9h2a2 2 0 0 1 2 2v11l-4-4h-6a2 2 0 0 1-2-2v-1" />
       </svg>
-      WhatsApp
+      Whatsapp
     </a>
     <a href="mailto:sofia.yas@gmail.com" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
