--- a/quiensoy.html
+++ b/quiensoy.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="./Rutinas.html">Rutinas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Asesorias.html">Asesorias</a>
+                        <a class="nav-link" href="./Asesorias.html">Asesorias y Servicios</a>
                     </li>
                 </ul>
             </div>
@@ -53,11 +53,19 @@
 
 <body>
     <div class="contendor1">
-        <h2>Hablando de mi</h2>
-        <img src="./imagenes/yo.jpg" alt="yo" class="img9">
-        <p>Hola, mi nombre es Sofia Sanvitale, trabajo y estudio sobre estetica hace ya varios años. Soy Cosmetologa,
+        <h2>¿Nos conocemos?</h2>
+        <img src="./imagenes/quien-soy.webp" alt="yo" class="img9">
+        <p class="gradient-lineal-qs">Hola, mi nombre es Sofia Sanvitale, trabajo y estudio sobre estetica hace ya varios años. Soy Cosmetologa,
             Cosmiatra, Maquilladora Profesional y Revendedora de productos de Exel, Lidherma, Idraet y Biobellus, entre
-            otros.</p>
+            otros.
+            Un plus, es que soy docente, tengo la formación pedagogica para dar clases, siempre voy a intentar construir
+            tu mejor versión.
+            Trabajar con lo que tenes, en la vida, como con los cuidados que decidimos tener para con nosotres, hay que
+            tomar decisiones,
+            y entendernos. Nuestras necesidades fisicas y mentales no son las mismas todo el tiempo cronologico.
+            Constantemente, surgen nuevos productos, o tratamientos. Mis pacientes saben que me caracterizo por mi
+            sinceridad, no me interesa solamente vender. Me interesa que estes bien, que no gastes plata de más. 
+            Juntxs vamos a ir, por tu mejor versión.</p>
 
     </div>
 </body>
