--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./QuienSoy.html">Quien Soy</a>
+            <a class="nav-link" href="./quiensoy.html">Quien Soy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Productos.html">Productos</a>
