--- a/Asesorias.html
+++ b/Asesorias.html
@@ -54,25 +54,41 @@
 <body>
     <div class="header">
     </div>
+    <h3 class="gradient-lineal-as">Mi espacio de trabajo</h3>
     <div class="contenido-asesorias">
         <p class="gradient-lineal">Las atenciones en Gabinete cuentan con cremas de laboratorios de primera calidad, que
             cumplen con todos los requisititos de salud e higiene.</p>
-        <img class="fotos-1" src="./imagenes/camilla.webp" alt="camilla">
+        <img class="fotos-asesorias" src="./imagenes/camilla.webp" alt="camilla">
         <p class="gradient-radial">Los elementos que tenemos en nuestro espacio, siempre son un compromiso primero con
             la
             salud y luego con la confiabilidad, durabilidad, y años de trayectoria de los elementos a utilizar.</p>
-        <img class="fotos-2" src="./imagenes/espatula ultrasonica.webp" alt="espatula">
+        <img class="fotos-asesorias" src="./imagenes/espatula ultrasonica.webp" alt="espatula">
         <p class="gradient-lineal-1">La espatula ultrasonica tiene beneficios para la piel, pero sobre todo es un tratamiento, NO INVASIVO. Es rápida, mejora la elasticidad de la piel, en sus funciones de limpieza afina el estrato corneo de la piel, ayuda a remover impurezas, membranas celulares vacias, y comedones abiertos o cerrados.
             Al mismo tiempo, al afinar el estrato corneo, contribuye a disminuir las lineas de expresión, y reducir las manchas o excesos de pigmentación en la piel. </p>
-        <img class="fotos-3" src="./imagenes/ice globes.webp" alt="iceglobes">
+        <img class="fotos-asesorias" src="./imagenes/ice globes.webp" alt="iceglobes">
         <p class="gradient-radial">Los ICE GLOBS son herramientas NO INVASIVAS, que colaboran a incrementar la irrigación sanguinea. Descongestionan, bajan la temperatura,
             entre tantos otros beneficios.
         </p>
-        <img class="fotos-4" src="./imagenes/dermaplaining.webp" alt="dermaplainig">
+        <img class="fotos-asesorias" src="./imagenes/dermaplaining.webp" alt="dermaplainig">
         <p class="gradient-lineal">El mango de bisturí y las hojas que se utilizan en nuestro espacio, se formularon especificamente para este fin.
             La marca comercial de SWANN MORTON. En nuestro país, existe un único importador habilitado hasta la fecha.</p>
     </div>
-    <iframe src="" frameborder="0">Dermaplainig en acción</iframe>
+
+    <h3 class="gradient-lineal-as">Mis Servicios de Maquillaje</h3>
+    <div class="Fotos-servicios">
+    <div class="Foto-Servicio">
+        <img src="./imagenes/sofi.webp" alt="Sofi">
+        <a href="https://wa.me/541140874353" class="boton">Book de Fotos</a>
+      </div> 
+      <div class="Foto-Servicio">
+        <img src="./imagenes/cande-reina.webp" alt="Cande">
+        <a href="https://wa.me/541140874353" class="boton">Espectaculos</a>
+      </div> 
+      <div class="Foto-Servicio">
+        <img src="./imagenes/madrinas.webp" alt="Madrina">
+        <a href="https://wa.me/541140874353" class="boton">Eventos</a>
+      </div>    
+    </div>
 
 <div class="gradient-lineal-as">
 <h3>Turnos para atención en gabinete</h3>
