--- a/Productos.html
+++ b/Productos.html
@@ -52,12 +52,15 @@
 </header>
 
 <body>
-    <div class="marcas">
+    
         <h3 class="titulo-marcas">MARCAS CON LAS QUE TRABAJAMOS</h3>
-        <img class="foto-5" src="./imagenes/logo exel.jpg" alt="Exel">
-        <img class="foto-6" src="./imagenes/logo lidherma.jpg" alt="lidherma">
-        <img class="foto-7" src="./imagenes/logo-biobellus.webp" alt="biobellus">
-        <img class="foto-8" src="./imagenes/Logo Idraet.webp" alt="Idraet">
+        <div class="marcas">
+        <div class="fotos-marcas">
+        <img class="fotos-marcas" src="./imagenes/logo exel.jpg" alt="Exel">
+        <img class="fotos-marcas" src="./imagenes/logo lidherma.jpg" alt="lidherma">
+        <img class="fotos-marcas" src="./imagenes/logo-biobellus.webp" alt="biobellus">
+        <img class="fotos-marcas" src="./imagenes/Logo Idraet.webp" alt="Idraet">
+    </div>
     </div>
 
 <div class="subtitulos-productos">
