--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
   <!--fotos-->
   <div class="imagenes-homepage">
-    <img src="./imagenes/agus.jpg" alt="Agus" class="img2" data-aos="fade-up">
-    <img src="./imagenes/anto.jpg" alt="Anto" class="img3" data-aos="fade-down">
-    <img src="./imagenes/lentes.jpg" alt="lentes" class="img5" data-aos="fade-right">
-    <img src="./imagenes/nayla.jpg" alt="nayla" class="img6" data-aos="fade-left">
-    <img src="./imagenes/sobrina de gon.jpg" alt="valen" class="img7" data-aos="fade-up-right">
+    <img src="./imagenes/agus.jpg" alt="Agus" class="imghome" data-aos="fade-up">
+    <img src="./imagenes/anto.jpg" alt="Anto" class="imghome" data-aos="fade-down">
+    <img src="./imagenes/lentes.jpg" alt="lentes" class="imghome" data-aos="fade-right">
+    <img src="./imagenes/nayla.jpg" alt="nayla" class="imghome" data-aos="fade-left">
+    <img src="./imagenes/sobrina de gon.jpg" alt="valen" class="imghome" data-aos="fade-up-right">
   </div>
 </body>
 
