--- a/Asesorias.html
+++ b/Asesorias.html
@@ -78,7 +78,7 @@
     <div class="Fotos-servicios">
     <div class="Foto-Servicio">
         <img src="./imagenes/sofi.webp" alt="Sofi">
-        <a href="https://wa.me/541140874353" class="boton">Book de Fotos</a>
+        <a href="https://wa.me/541140874353" class="boton">Books</a>
       </div> 
       <div class="Foto-Servicio">
         <img src="./imagenes/cande-reina.webp" alt="Cande">
