--- a/Productos.html
+++ b/Productos.html
@@ -52,49 +52,47 @@
 </header>
 
 <body>
-    
         <h3 class="titulo-marcas">MARCAS CON LAS QUE TRABAJAMOS</h3>
-        <div class="marcas">
-        <div class="fotos-marcas">
-        <img class="fotos-marcas" src="./imagenes/logo exel.jpg" alt="Exel">
-        <img class="fotos-marcas" src="./imagenes/logo lidherma.jpg" alt="lidherma">
-        <img class="fotos-marcas" src="./imagenes/logo-biobellus.webp" alt="biobellus">
-        <img class="fotos-marcas" src="./imagenes/Logo Idraet.webp" alt="Idraet">
+        <div class="gradient-lineal-marcas">
+        <img class="imgex1" src="./imagenes/logo exel.jpg" alt="Exel">
+        <img class="imgex1" src="./imagenes/logo lidherma.jpg" alt="lidherma">
+        <img class="imgex1" src="./imagenes/logo-biobellus.webp" alt="biobellus">
+        <img class="imgex1" src="./imagenes/Logo Idraet.webp" alt="Idraet">
     </div>
-    </div>
+
 
 <div class="subtitulos-productos">
 <h4 class="subtitulo-marcas">Mis productos elegidos de Exel Institute</h4>
 <div class="gradient-lineal-marcas">
 <img src="./imagenes/limpieza exel.webp" alt="limpieza-ex" class="imgex1">
-<img src="./imagenes/fps exel.webp" alt="fps-exel" class="imgex2">
-<img src="./imagenes/tonico exel.webp" alt="tonico-exel" class="imgex3">
-<img src="./imagenes/celulitis exel.webp" alt="celulitis-exel" class="imgex4">
-<img src="./imagenes/promoter exel.webp" alt="promoter-exel" class="imgex5">
+<img src="./imagenes/fps exel.webp" alt="fps-exel" class="imgex1">
+<img src="./imagenes/tonico exel.webp" alt="tonico-exel" class="imgex1">
+<img src="./imagenes/celulitis exel.webp" alt="celulitis-exel" class="imgex1">
+<img src="./imagenes/promoter exel.webp" alt="promoter-exel" class="imgex1">
 </div>
 <h4 class="subtitulo-marcas">Mis productos elegidos de LIDHERMA</h4>
 <div class="gradient-lineal-marcas">
-<img src="./imagenes/hidrosomas.webp" alt="hidrosomas" class="imglid1">
-<img src="./imagenes/hyaluronic 4d.webp" alt="hyaluronic" class="imglid2">
-<img src="./imagenes/radian c.webp" alt="radianC" class="imglid3">
-<img src="./imagenes/ultra retinol.webp" alt="URetinol" class="imglid4">
-<img src="./imagenes/sense control tonico.webp" alt="sensecontrol" class="imglid5">
+<img src="./imagenes/hidrosomas.webp" alt="hidrosomas" class="imgex1">
+<img src="./imagenes/hyaluronic 4d.webp" alt="hyaluronic" class="imgex1">
+<img src="./imagenes/radian c.webp" alt="radianC" class="imgex1">
+<img src="./imagenes/ultra retinol.webp" alt="URetinol" class="imgex1">
+<img src="./imagenes/sense control tonico.webp" alt="sensecontrol" class="imgex1">
 </div>
 <h4 class="subtitulo-marcas">Productos más vendidos de Biobellus</h4>
 <div class="gradient-lineal-marcas">
-<img src="./imagenes/skincer.webp" alt="skincer" class="imgbio1">
-<img src="./imagenes/gel limpieza biobellus.webp" alt="gel-limpieza-biobellus" class="imgbio2">
-<img src="./imagenes/bruma biobellus.webp" alt="bruma-biobellus" class="imgbio3">
-<img src="./imagenes/jojoba biobellus.webp" alt="aceite-jojoba" class="imgbio4">
-<img src="./imagenes/serums biobellus.webp" alt="serums-biobellus" class="imgbio5">
+<img src="./imagenes/skincer.webp" alt="skincer" class="imgex1">
+<img src="./imagenes/gel limpieza biobellus.webp" alt="gel-limpieza-biobellus" class="imgex1">
+<img src="./imagenes/bruma biobellus.webp" alt="bruma-biobellus" class="imgex1">
+<img src="./imagenes/jojoba biobellus.webp" alt="aceite-jojoba" class="imgex1">
+<img src="./imagenes/serums biobellus.webp" alt="serums-biobellus" class="imgex1">
 </div>
 <h4 class="subtitulo-marcas">Productos más vendidos de IDRAET Dermopurity</h4>
 <div class="gradient-lineal-marcas">
-<img src="./imagenes/stress out.jpeg" alt="stress-out" class="imgid1">
-<img src="./imagenes/mascara enzimatica.webp" alt="máscara-enzimatica" class="imgid2">
-<img src="./imagenes/gel vit C.webp" alt="gel-limpieza" class="imgid3">
-<img src="./imagenes/protective toner.webp" alt="toner" class="imgid4">
-<img src="./imagenes/serums.webp" alt="serums-idraet" class="imgid5">
+<img src="./imagenes/stress out.jpeg" alt="stress-out" class="imgex1">
+<img src="./imagenes/mascara enzimatica.webp" alt="máscara-enzimatica" class="imgex1">
+<img src="./imagenes/gel vit C.webp" alt="gel-limpieza" class="imgex1">
+<img src="./imagenes/protective toner.webp" alt="toner" class="imgex1">
+<img src="./imagenes/serums.webp" alt="serums-idraet" class="imgex1">
 </div>
 </div>
 
